--- a/.github/workflows/uupload_youtube_shorts.yml
+++ b/.github/workflows/uupload_youtube_shorts.yml
@@ -38,6 +38,7 @@ jobs:
         pip install --upgrade pip
         pip install opencv-python-headless  # Using headless version for CI environment
         pip install -r requirements.txt
+        pip install google-api-python-client  # Ensure google-api-python-client is installed
 
     - name: Lint code with flake8
       run: |
