--- a/.github/workflows/upload_youtube_shorts.yml
+++ b/.github/workflows/upload_youtube_shorts.yml
@@ -47,7 +47,7 @@ jobs:
         source ${{ env.VENV_PATH }}/bin/activate
         pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest flake8
+        pip install pytest flake8 google-auth google-auth-oauthlib google-auth-httplib2
 
     - name: 🔍 Lint Code
       run: |
